manifests/ingress.yaml
# frontend nginx ingress controller config

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ip4-frontend-ingress
  namespace: orchestration
  labels:
    name: my-ip4-frontend-ingress
spec:
  ingressClassName: nginx
  rules:
  -  http:
      paths:
        - pathType: Prefix
          path: /frontend(/|$)(.*)
          backend:
            service:
              name: my-ip4-frontend-service
              port: 
                number: 3000

---

# backend nginx ingress controller config

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ip4-backend-ingress
  namespace: orchestration
  labels:
    name: my-ip4-backend-ingress
spec:
  ingressClassName: nginx
  rules:
  -  http:
      paths:
        - pathType: Prefix
          path: /backend(/|$)(.*)
          backend:
            service:
              name: my-ip4-backend-service
              port: 
                number: 5001
